--- a/application/MapsAgo/MapsAgo.Web/Views/Home/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Home/Index.cshtml
@@ -18,6 +18,6 @@
     <div class="col-md-6">
         <h2>Administration</h2>
         <p>Manage users access and audit their events.</p>
-        <p>@Html.ActionLink("Go >>", "Index", "User", null, new { @class = "btn btn-info" })</p>
+        <p>@Html.ActionLink("Go >>", "Index", "Users", null, new { @class = "btn btn-info" })</p>
     </div>
 </div>
